--- a/profiles-waterfall/build.gradle
+++ b/profiles-waterfall/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     shadow 'aopalliance:aopalliance:1.0'
     compile 'org.apache.commons:commons-lang3:3.9'
     shadow 'org.apache.commons:commons-lang3:3.9'
+    compile 'org.projectlombok:lombok:1.18.12'
+    shadow 'org.projectlombok:lombok:1.18.12'
 }
 
 processResources {
@@ -35,5 +37,6 @@ shadowJar {
         include(dependency('javax.inject:javax.inject:1'))
         include(dependency('aopalliance:aopalliance:1.0'))
         include(dependency('org.apache.commons:commons-lang3:3.9'))
+        include(dependency('org.projectlombok:lombok:1.18.12'))
     }
 }
