--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'profiles'
 
-include 'profiles-common', 'profiles-paper', 'profiles-waterfall'
+include 'profiles-common', 'profiles-paper-core', 'profiles-paper-gui', 'profiles-waterfall'
