Minimal gui functionality

--- a/profiles-paper-gui/src/main/resources/plugin.yml
+++ b/profiles-paper-gui/src/main/resources/plugin.yml
@@ -3,3 +3,7 @@ version: 1.0.0
 main: com.awooga.profiles.ProfilesPaperGuiPlugin
 api-version: 1.13
 depend: [PlaceholderAPI]
+commands:
+  profiles:
+    description: Main command to switch user profiles
+    usage: /profiles
