--- a/profiles-paper-gui/build.gradle
+++ b/profiles-paper-gui/build.gradle
@@ -13,7 +13,7 @@ repositories {
 }
 
 dependencies {
-    compile project(':profiles-common')
+    compile project(':profiles-paper-core')
     compileOnly 'com.destroystokyo.paper:paper-api:1.15.2-R0.1-SNAPSHOT'
     compile 'com.google.inject:guice:4.0'
     shadow 'com.google.inject:guice:4.0'
@@ -25,6 +25,8 @@ dependencies {
     shadow 'org.apache.commons:commons-lang3:3.9'
     compile 'org.projectlombok:lombok:1.18.12'
     shadow 'org.projectlombok:lombok:1.18.12'
+    compile 'mysql:mysql-connector-java:5.1.41'
+    shadow 'mysql:mysql-connector-java:5.1.41'
 
     compileOnly 'me.clip:placeholderapi:2.10.4'
 
@@ -47,6 +49,7 @@ shadowJar {
         include(dependency('aopalliance:aopalliance:1.0'))
         include(dependency('org.apache.commons:commons-lang3:3.9'))
         include(dependency('org.projectlombok:lombok:1.18.12'))
+        include(dependency('mysql:mysql-connector-java:5.1.41'))
         // do not shadow placeholder api
     }
 }
