--- a/profiles-paper-gui/build.gradle
+++ b/profiles-paper-gui/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     compile project(':profiles-paper-core')
     //compileOnly 'com.destroystokyo.paper:paper-api:1.15.2-R0.1-SNAPSHOT'
     compileOnly 'org.spigotmc:spigot-api:1.15.2-R0.1-SNAPSHOT'
+    compileOnly 'org.jetbrains:annotations:16.0.1'
+
     compile 'com.google.inject:guice:4.0'
     shadow 'com.google.inject:guice:4.0'
     compile 'javax.inject:javax.inject:1'
@@ -34,6 +36,8 @@ dependencies {
     shadow 'org.projectlombok:lombok:1.18.12'
     compile 'mysql:mysql-connector-java:5.1.41'
     shadow 'mysql:mysql-connector-java:5.1.41'
+    compile 'org.jeasy:easy-states:2.0.0'
+    shadow 'org.jeasy:easy-states:2.0.0'
 
     compileOnly 'me.clip:placeholderapi:2.10.4'
 
